sandbox/output
OneHundredDoorsTest.java:65: error: no suitable method found for assertArrayEquals(String,String)
        assertArrayEquals("1-4-9-16-25-36-49-64-81-100", oneHundredDoors.idsOfOpenedDoorsAfterPassingDoors(100));
        ^
    method Assert.assertArrayEquals(long[],long[]) is not applicable
      (argument mismatch; String cannot be converted to long[])
    method Assert.assertArrayEquals(int[],int[]) is not applicable
      (argument mismatch; String cannot be converted to int[])
    method Assert.assertArrayEquals(short[],short[]) is not applicable
      (argument mismatch; String cannot be converted to short[])
    method Assert.assertArrayEquals(char[],char[]) is not applicable
      (argument mismatch; String cannot be converted to char[])
    method Assert.assertArrayEquals(byte[],byte[]) is not applicable
      (argument mismatch; String cannot be converted to byte[])
    method Assert.assertArrayEquals(Object[],Object[]) is not applicable
      (argument mismatch; String cannot be converted to Object[])
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
